Add Devices and Fraction Grid examples

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="/static/shared/css/devices.min.css">
     <link rel="stylesheet" href="/static/shared/css/vui.css">
 
     <script src="/static/shared/js/cq-prolyfill.min.js" async></script>
