--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>🔥 sandbox</title>
+    <title>Videa Demo</title>
 
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway|Roboto+Slab|Roboto|Roboto+Condensed">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
